tests/errors/type9.ramen
SELECT "glop" IN [ 1;2;3 ] AS x;
